2007-09-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala: fix support for static classes

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: ensure there is always a default construction method
	  for non-abstract non-VAPI classes

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala: append the generated free
	  function to the right file fragment

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorsignal.vala: report an error when trying to
	  define a signal in a type not deriving from GLib.Object

2007-09-07  Jürg Billeter  <j@bitron.ch>

	* doc/vala/default.css, doc/vala/xhtml.xsl: support notes

	* doc/vala/classes.xml: document class declarations

2007-09-07  Jürg Billeter  <j@bitron.ch>

	* update license headers to the GNU Lesser General Public License,
	  version 2.1 or later

2007-09-06  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add GTypeDebugFlags and GNode

2007-09-06  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-standalone/: updated to currrent git
	* vapi/gio-standalone.vala: regenerated

2007-09-06  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/gnet-2.0/*: create bindings for gnet-2.0
	* vapi/gnet-2.0.vala: first attempt to generate gnet-2.0 bindings. 
	  not adding to Makefile.am for now, as this VAPI is untested, 
	  well and because gnet-2.0 uses depricated glib API

2007-09-06  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vala/valanamespace.vala, vapigen/valagidlparser.vala:
	  support multiple namespace mappings for binding really broken
	  libraries like gnet-2.0. support shell patterns to lookup attributes
	  from metadata files. fixes bug 474145

2007-09-06  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: support for GPatternSpec

2007-09-05  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: link to bug 473804 for Object::notify